﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

DATABASE
	Added: SPF type to the list of allowed DNS resource records
	Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
	Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns

FRONTEND
	Added: SPF DNS resource record type (validated as a TXT record)
	Changed: The type field cannot longer be changed when editing a DNS resource record
	Fixed: Cannot add DKIM/DMARC DNS resource record
	Fixed: Customer must be allowed to specify custom TTL value for any DNS resource record
	Fixed: Customer must be allowed to specify name field of any DNS resource record
	Fixed: IDNs are shown in ASCII in SSL certificate management interface
	Fixed: iMSCP_Update_Database::addIndex() doesn't allow to specify index length

INSTALLER
	Added: Conditional statement feature for install.xml files (copy_config items only)

PLUGINS
	Updated: API version to 1.0.4

SERVERS
	Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
	Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)
	Fixed: Traffic accounting routines must not remove log files (ProFTPD/VsFTPd). Files are now truncated instead.
	Fixed: VsFTPd doesn't reopen xferlog file automatically when the file has been removed, leading to traffic data loss
	Removed: /var/log/proftpd/ftp_traff.log custom log. Traffic data are now pulled from /var/log/proftpd/xferlog

YOUTRACK
	IP-1231 Default SPF DNS resource records should be overrideable
	IP-1509 Could not generate SSL certificate through the frontEnd - Invalide SSL certificate
	IP-1510 VsFTPd - Use of uninitialized value $tmpFile