@@ -5,6 +5,7 @@ Git 1.2.x
 ------------------------------------------------------------------------------------------------------------------------
 
 DATABASE
+	Added: Debug info for loading of listener file (Event::Manager)
 	Added: SPF type to the list of allowed DNS resource records
 	Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
 	Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns
